feat(article_review): assign requests to editors
